--- a/dns-tunnel-client/Cargo.toml
+++ b/dns-tunnel-client/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dns-tunnel-lib = { path = "../dns-tunnel-lib" }
